# gitnudge

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/gitnudge/: cli.py  gitio.py  graph.py  health.py  status.py
tests/: test_graph.py  test_health.py  test_status.py
